--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ button, input[type="submit"] {
     border: 1px solid black;
     border-radius: .5em;
     padding: .5em;
-    margin: .8em 0;
+    margin: .5em 0;
     width: 100%;
     display: flex;
     justify-content: center;
